--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,4 +20,9 @@ jobs:
         node-version: 14.x
         cache: 'npm'
     - run: npm ci
-    - run: npm run deploy
+    - name: Deploy with gh-pages
+      run: |
+        git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+        npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
